@@ -1,0 +1,5 @@
+<RCC>
+    <qresource prefix="/autorotate">
+        <file>autorotate.png</file>
+    </qresource>
+</RCC>
